# books-recommendation

./: .gitignore  README.md  pyproject.toml
mab_books/: __init__.py  app.py  bandits.py  books.py  cli.py  contextual.py  contextual_simulation.py  simulation.py
tests/: test_bandits.py  test_books.py  test_contextual.py
